# urjc-gicd-pln-mt

./: .gitignore  README.md
01-introduccion/: .gitignore  README.md  pyproject.toml
01-introduccion/data/processed/: test.csv  train.csv
01-introduccion/notebooks/: compare.ipynb  eda.ipynb
01-introduccion/results/bert-albert-finetuned/: dev.csv  test.csv  train.csv
01-introduccion/results/bert-distilbert-finetuned/: dev.csv  test.csv  train.csv
01-introduccion/results/lr-ft-advanced/: dev.csv  test.csv  train.csv
01-introduccion/results/lr-ft-simple/: dev.csv  test.csv  train.csv
01-introduccion/results/lr-sbert-minilm/: dev.csv  test.csv  train.csv
01-introduccion/results/lr-sbert-mpnet/: dev.csv  test.csv  train.csv
01-introduccion/results/lr-tfidf-advanced/: dev.csv  test.csv  train.csv
01-introduccion/results/lr-tfidf-simple/: dev.csv  test.csv  train.csv
01-introduccion/scripts/experiments/: bert_albert_finetuned.py  bert_distilbert_finetuned.py  lr_ft_advanced.py  lr_ft_simple.py  lr_sbert_minilm.py  lr_sbert_mpnet.py  lr_tfidf_advanced.py  lr_tfidf_simple.py
01-introduccion/scripts/processing/: extract_comments.py  prepare_train_test.py
01-introduccion/src/spam_ham_detector/: __init__.py  config.py  dataset.py  evaluation.py
01-introduccion/src/spam_ham_detector/classifier/: __init__.py  bert.py
01-introduccion/src/spam_ham_detector/tokenizer/: __init__.py  simple_tokenizer.py  spacy_tokenizer.py
01-introduccion/src/spam_ham_detector/vectorizer/: __init__.py  fasttext.py  sbert.py  tfidf.py
02-analisis-textual/: README.md  pyproject.toml
02-analisis-textual/data/: ciencia_datos.txt  data_science.txt  open_australia_1.txt  open_australia_2.txt
02-analisis-textual/notebooks/: 02_01_analisis_linguistico.ipynb  02_02_recursos_linguisticos.ipynb
03-representacion-texto/: README.md  pyproject.toml
03-representacion-texto/notebooks/: 03_01_representaciones_clasicas.ipynb  03_02_word_embeddings.ipynb
04-redes-neuronales/: README.md  pyproject.toml
04-redes-neuronales/notebooks/: 04_01_redes_neuronales.ipynb
05-modelos-lenguaje/: README.md  pyproject.toml
05-modelos-lenguaje/notebooks/: 05_01_transformers.ipynb  05_02_fine_tuning.ipynb  05_03_post_training.ipynb
06-aplicaciones/: README.md  pyproject.toml
06-aplicaciones/data/: guia_docente_resumen.txt  normativa_asistencia.txt  normativa_evaluacion.txt  normativa_examenes.txt
06-aplicaciones/notebooks/: 06_01_prompt_engineering.ipynb  06_02_rag.ipynb  06_03_agentes.ipynb
06-aplicaciones/scripts/: 06_02_rag_basico.py  06_02_rag_conversacional.py  06_02_rag_retrieval.py  06_03_agent_rag_tool.py  06_03_agent_skills_tools.py  06_03_agent_tools.py  06_03_flow_lineal.py
07-aumento-datos/: README.md  pyproject.toml
07-aumento-datos/notebooks/: 07_01_aumento_datos.ipynb
