[project]
name = "03-representacion-texto"
version = "0.1.0"
description = "Representación del texto"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "ipykernel>=6.0.0",
    "scikit-learn>=1.8.0",
    "pandas>=2.3.3",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "gensim>=4.3.0",
    "spacy>=3.8.11",
    "en-core-web-sm",
    "torch>=2.9.1",
    "transformers>=4.57.5",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
