[project]
name = "07-aumento-datos"
version = "0.1.0"
description = "Aumento de datos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "ipykernel>=6.0.0",
    "datasets>=4.5.0",
    "scikit-learn>=1.8.0",
    "nlpaug>=1.1.11",
    "nltk>=3.9.2",
    "torch>=2.10.0",
    "transformers>=4.30.0,<5.0.0",
    "protobuf>=6.33.5",
    "sacremoses>=0.1.1",
]
